--- a/faq.html
+++ b/faq.html
@@ -12,15 +12,24 @@
             <div id="content" class="about">
                 <h1>Frequently Asked Questions</h1>
 
-                <h2>Where do these prices come from?</h2>
-                <p>We use Amazon's product listings to get the data on this website.</p>
+                <h2>What is the point of this website?</h2>
+                <p>To allow people to share their referral code. As of 12/23 the referral has value for both the buyer and the referrer.</p>
+
+                <h2>Why did you create this?</h2>
+                <p>When I was shopping for a Tesla I came across a reddit post on someone who created one and there were questions around how fair it was and would they open source. It was crickets. So I created this and open sourced it and made it as fair as possible. More of this below.</p>
 
                 <h2>How often is this site updated?</h2>
-                <p>Prices are updated at random throughout the day.</p>
+                <p>Randomly.</p>
 
-                <h2 id="disclosures"></h2>
-                <p>We may receive commissions if you purchase a product from a link on this site. See <a href="https://affiliate-program.amazon.com/">Amazon's Affiliate Program for more info.</a></p>
+                <h2>Is this open sourced so we know there is nothing funny going on?</h2>
+                <p>The code is opensourced here for full visibility. https://github.com/iYoungblood/tesla-referral </p>
 
+                <h2>How do we know this is fair for everyone?</h2>
+                <p>Its as fair as it gets.* Without opening up the database and showing it to everyone, it does a random on the data and returns one of the entries each time you click the button. If you know of a better way to show this data, please let me know.</p>
+                
+                <h2>What is the * above for?</h2>
+                <p>For every 1000 entires, I will add my link again. Why you ask? This domain cost money, the instance costs money... everything costs money, including my time to do this.</p>
+                                
                 <h2>Additional information</h2>
                 <p>You have questions? info@adata.monster</p>
 
