--- a/faq.html
+++ b/faq.html
@@ -28,7 +28,7 @@
                 <p>Its as fair as it gets.* Without opening up the database and showing it to everyone, it does a random on the data and returns one of the entries each time you click the button. If you know of a better way to show this data, please let me know.</p>
                 
                 <h2>What is the * above for?</h2>
-                <p>For every 1000 entires, I will add my link again. Why you ask? This domain cost money, the instance costs money... everything costs money, including my time to do this.</p>
+                <p>For every 1000 entires, I will add my link again. Why you ask? This domain cost money, the instance costs money... everything costs money, including my time to do this. For up to 1000 links, we are all 1 out of 1000. If there were 5000, I would have an advantage over any other one person as I would be in there 5/5000 entires while others are 1/5000. However, the fairness is that 4995/5000 are not me.</p>
                                 
                 <h2>Additional information</h2>
                 <p>You have questions? info@adata.monster</p>
