Updated for new referral program

--- a/faq.html
+++ b/faq.html
@@ -34,6 +34,7 @@
                 <p>You have questions? info@adata.monster</p>
 
                 <h2>Change Log:</h2>
+                <p><span class="timestamp">12-14-2023</span> Couple updates, visuals, typos...</p>
                 <p><span class="timestamp">12-05-2023</span> And here we go...</p>
 
             </div>
